--- a/src/main/resources/templates/WebQuanLy/exchange-requests.html
+++ b/src/main/resources/templates/WebQuanLy/exchange-requests.html
@@ -8,8 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet"/>
     <link rel="stylesheet" th:href="@{/css/admin.css}"/>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script th:src="@{/js/sidebar.js}" defer></script>
-    <script th:src="@{/js/notification.js}"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style>
         :root {
             --primary-color: #153054;
@@ -554,7 +556,7 @@
     <div th:replace="~{fragments/sidebar :: sidebar}" class="fixed top-0 left-0 h-full bg-gray-800 text-white w-64"></div>
 
     <nav class="navbar custom-navbar navbar-expand-lg navbar-light bg-white shadow-sm px-4 fixed top-0 right-0 w-[calc(100%-256px)] d-flex">
-        <div class="ms-auto" th:replace="~{fragments/account_dropdown :: accountDropdown(user=${currentUser})}"></div>
+        <div class="ms-auto" th:replace="~{fragments/account_dropdown :: accountDropdown(user=${user})}"></div>
     </nav>
 
     <!-- Nội dung chính bên phải -->
@@ -696,8 +698,7 @@
     </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 <script>
 
     // Định dạng giá trị tiền tệ cho cột chênh lệch giá
@@ -802,5 +803,6 @@
         });
     }
 </script>
+<script th:src="@{/js/notification.js}"></script>
 </body>
 </html>
